# iron-bin

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
camino-ext/: Cargo.toml
camino-ext/src/: lib.rs
crates/camino-ext/: Cargo.toml
crates/camino-ext/src/: lib.rs
crates/iron-bin/: Cargo.toml
crates/iron-bin/src/trash/: info.rs
crates/prompt/: Cargo.toml
crates/prompt/src/: lib.rs
crates/trash/: Cargo.toml
crates/trash/src/: app.rs  cli.rs  lib.rs
crates/trash/tests/: trash.rs
crates/xtask-build-man/: Cargo.toml
crates/xtask-build-man/src/: main.rs
iron-bin/: Cargo.toml
iron-bin/src/: dir_sizes.rs  lib.rs  trash.rs
iron-bin/src/trash/: dir_sizes.rs  info.rs
src/: app.rs  camino_ext.rs  cli.rs  lib.rs  main.rs  prompt.rs  trash.rs
src/trash/: dir_sizes.rs  info.rs  mod.rs
tests/: cli.rs  trash.rs
trash/: Cargo.toml
trash/src/: app.rs  lib.rs  main.rs
xtask/: Cargo.toml
xtask-build-man/: Cargo.toml
xtask-build-man/src/: main.rs
xtask/src/: main.rs
