# Cargo virtual manifest
# https://doc.rust-lang.org/cargo/reference/manifest.html
# https://doc.rust-lang.org/cargo/reference/workspaces.html

[workspace]
members = ["iron-bin", "trash"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.99"
camino = "1.1.10"
chrono = { version = "0.4.41", default-features = false, features = ["std"] }
