# Cargo virtual manifest
# https://doc.rust-lang.org/cargo/reference/manifest.html
# https://doc.rust-lang.org/cargo/reference/workspaces.html

[workspace]
members = [
  "camino-ext",
  "iron-bin",
  "trash",
  "xtask-build-man",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.100"
camino = "1.2.0"
chrono = { version = "0.4.42", default-features = false, features = ["std"] }
clap = { version = "4.5.48", default-features = false, features = ["std", "cargo", "derive", "error-context", "help", "usage"] }
iron-bin = { path = "iron-bin" }
trash = { path = "trash" }
