# Cargo virtual manifest
# https://doc.rust-lang.org/cargo/reference/manifest.html
# https://doc.rust-lang.org/cargo/reference/workspaces.html

[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Laurent Pireyn"]
license = "Apache 2.0"
repository = "https://github.com/lpireyn/iron-bin/"
keywords = ["trash"]
categories = ["command-line-utilities", "filesystem"]

[workspace.dependencies]
anyhow = "1.0.100"
camino = "1.2.0"
camino-ext = { path = "crates/camino-ext" }
chrono = { version = "0.4.42", default-features = false, features = ["std"] }
clap = { version = "4.5.48", default-features = false, features = ["std", "cargo", "derive", "error-context", "help", "usage"] }
iron-bin = { path = "crates/iron-bin" }
trash = { path = "crates/trash" }

# https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
