# Cargo manifest
# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "trash"
description = "CLI for the Freedesktop trash."
version.workspace = true
edition.workspace = true

[[bin]]
name = "trash"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
camino.workspace = true
chrono.workspace = true
clap = { version = "4.5.48", default-features = false, features = ["std", "cargo", "derive", "error-context", "help", "usage"] }
humansize = "2.1.3"
iron-bin = { path = "../iron-bin" }
shell-quote = { version = "0.7.2", default-features = false, features = ["sh"] }
tabled = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.17"
assert_fs = "1.1.3"
predicates = "3.1.3"
