# Cargo manifest
# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "xtask-build-man"
description = "Cargo xtask that builds the man pages for the trash command."
version = "0.0.0"
edition.workspace = true

[dependencies]
clap.workspace = true
clap_mangen = "0.2.29"
trash.workspace = true
