# Cargo manifest
# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "camino-ext"
description = "Extensions for Camino."
version = "0.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
camino.workspace = true
