# Cargo manifest
# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "iron-bin"
description = "Freedesktop trash."
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
camino.workspace = true
camino-ext.workspace = true
chrono = { workspace = true, features = ["clock"] }
rust-ini = "0.21.3"
urlencoding = "2.1.3"
xdg = "3.0.0"

[dev-dependencies]
assert_fs = "1.1.3"
